# yolov8-face-landmarks-opencv-dnn

./: .gitignore  MIGRATION.md  README.md  config.yaml  main.py  pyproject.toml
examples/: __init__.py  align_faces.py  detect_image.py  quality_assessment.py  track_video.py
onnx/: lightqnet-dm050.onnx  lightqnet-dm100.onnx
src/: __init__.py  alignment.py  config.py  detection.py  face_crop_saver.py  quality.py  tracking.py  utils.py
tests/: __init__.py  test_structure.py
